mainpage should be working now

--- a/views/mainpage.hbs
+++ b/views/mainpage.hbs
@@ -112,189 +112,9 @@
                     </div>
                 </div>
             </div>
-
-            <div class="postscontainer">
-                <div class="postheader">
-                    <div class="communityposticonholder">
-                        <div class="communityposticon">
-                            <img src="/public/img/apple_logo.jpg"/>
-                        </div>
-                    </div>
-                    <div class="userpostname">
-                        <span class="postedon"><a href="./main_community.html">b/apple</a></span>
-                        <span>·</span>
-                        <span>Posted by</span>
-                        <span class="postedby"><a href="./profilepage3.html">u/sukunaryomen</a></span>
-                        <span class="postdate">7 years ago</span>
-                    </div>
-                </div>
-                <div class="posttitleheader">
-                    <span><h3><a href="./samplepost3.html">Sell me on the iphone</a></h3></span>
-                </div>
-                <div class="posttextcontent">
-                    <span>I have an android right now and i love the thing to death. I have encountered zero problems with it. I had an iphone once and hated it. But it was the 4 or 4s. All of my friends have iphones and they live in a different state so I know getting an iphone would make it easier for us to communicate. The only problem I have with the iphones are that every time I get new music I have to resynce my whole phone just to add a couple songs or albums. With photos I had to use the photos app and again sync my phone in order to get them off the phone. With Android all I have to do is click and drag both my photos and music and in less than 30 seconds I am done. So r/apple sell on why I should get an ihpone</span>
-                </div>
-                <div class="postpicturecontent">
-                    
-                </div>
-                <div class="postfooter">
-                    <div class="upbit">
-                        <img src="/public/img/up-arrow-regular-24.png"/>
-                    </div>
-                    <div class="downbit">
-                        <img src="/public/img/down-arrow-regular-24.png"/>
-                    </div>
-                    <div class="comment">
-                        <img src="/public/img/comment-regular-24.png"/>
-                    </div>
-                    <div class="share">
-                        <img src="/public/img/share-regular-24.png"/>
-                    </div>
-                    <div class="commentcounter">
-                        <span><a href="./samplepost3.html">1 reply</a></span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="postscontainer">
-                <div class="postheader">
-                    <div class="communityposticonholder">
-                        <div class="communityposticon">
-                            <img src="/public/img/webdevicon.png"/>
-                        </div>
-                    </div>
-                    <div class="userpostname">
-                        <span class="postedon"><a href="">b/webdev</a></span>
-                        <span>·</span>
-                        <span>Posted by</span>
-                        <span class="postedby"><a href="./profilepage1.html">u/wala3h</a></span>
-                        <span class="postdate">8 days ago</span>
-                    </div>
-                </div>
-                <div class="posttitleheader">
-                    <span><h3><a href="./samplepost3.html">MDN is very nice</a></h3></span>
-                </div>
-                <div class="posttextcontent">
-                    <span>It really helped us in creating this website! It gave a fast and easy way to access information to different elements. ^_^</span>
-                </div>
-                <div class="postpicturecontent">
-                    
-                </div>
-                <div class="postfooter">
-                    <div class="upbit">
-                        <img src="/public/img/up-arrow-regular-24.png"/>
-                    </div>
-                    <div class="downbit">
-                        <img src="/public/img/down-arrow-regular-24.png"/>
-                    </div>
-                    <div class="comment">
-                        <img src="/public/img/comment-regular-24.png"/>
-                    </div>
-                    <div class="share">
-                        <img src="/public/img/share-regular-24.png"/>
-                    </div>
-                    <div class="commentcounter">
-                        <span><a href="./samplepost1.html">1 reply</a></span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="postscontainer">
-                <div class="postheader">
-                    <div class="communityposticonholder">
-                        <div class="communityposticon">
-                            <img src="/public/img/pcmrlogo.png"/>
-                        </div>
-                    </div>
-                    <div class="userpostname">
-                        <span class="postedon"><a href="">b/PCMasterRace</a></span>
-                        <span>·</span>
-                        <span>Posted by</span>
-                        <span class="postedby"><a href="./profilepage6.html">u/weewoowooweewoo</a></span>
-                        <span class="postdate">1 year ago</span>
-                    </div>
-                </div>
-                <div class="posttitleheader">
-                    <span><h3><a href="./samplepost5.html">Need help fixing something</a></h3></span>
-                </div>
-                <div class="posttextcontent">
-                    <span>I think I broke a part of my pc, video proof is in <a href="https://www.youtube.com/watch?v=BbeeuzU5Qc8"> this link</a>.</span>
-                </div>
-                <div class="postpicturecontent">
-                    
-                </div>
-                <div class="postfooter">
-                    <div class="upbit">
-                        <img src="/public/img/up-arrow-regular-24.png"/>
-                    </div>
-                    <div class="downbit">
-                        <img src="/public/img/down-arrow-regular-24.png"/>
-                    </div>
-                    <div class="comment">
-                        <img src="/public/img/comment-regular-24.png"/>
-                    </div>
-                    <div class="share">
-                        <img src="/public/img/share-regular-24.png"/>
-                    </div>
-                    <div class="commentcounter">
-                        <span><a href="./samplepost5.html">1 reply</a></span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="postscontainer">
-                <div class="postheader">
-                    <div class="communityposticonholder">
-                        <div class="communityposticon">
-                            <img src="/public/img/pcbuildinglogo.png"/>
-                        </div>
-                    </div>
-                    <div class="userpostname">
-                        <span class="postedon"><a href="">b/PCBuilding</a></span>
-                        <span>·</span>
-                        <span>Posted by</span>
-                        <span class="postedby"><a href="./profilepage4.html">u/yutaokkotsu</a></span>
-                        <span class="postdate">1 year ago</span>
-                    </div>
-                </div>
-                <div class="posttitleheader">
-                    <span><h3><a href="./samplepost4.html">What are the ideal specs for a PC in 2023?</a></h3></span>
-                </div>
-                <div class="posttextcontent">
-                    <span>I'm thinking of building my own PC within the next couple months once I save up enough money and I need some second opinions on if the PC hardware I'm looking at would run games like Minecraft, Overwatch 2, COD, etc. smoothly/around 1080p. I'll most likely be using it for uni assignments and general browsing on the side, too. I've been looking at these specs for my build:
-                        - i3-13100
-                        - RTX 4060 GPU
-                        - 16GB DDR4 RAM u/3200Mhz
-                        - Gigabyte B660M AORUS Pro
-                        - 256 GB NVMe SSD
-                        - 550W 80+ Bronze PSU
-                        - Windows 11 Pro
-                        
-                        Should I just pair these with a standard windows computer or something else made for gaming? If you guys could let me know if these look good or if I should switch some things out for better quality/price hardware, it'd be a huge help! I'm very new to all this, x ^_^
-                        
-                    </span>
-                </div>
-                <div class="postpicturecontent">
-                    
-                </div>
-                <div class="postfooter">
-                    <div class="upbit">
-                        <img src="/public/img/up-arrow-regular-24.png"/>
-                    </div>
-                    <div class="downbit">
-                        <img src="/public/img/down-arrow-regular-24.png"/>
-                    </div>
-                    <div class="comment">
-                        <img src="/public/img/comment-regular-24.png"/>
-                    </div>
-                    <div class="share">
-                        <img src="/public/img/share-regular-24.png"/>
-                    </div>
-                    <div class="commentcounter">
-                        <span><a href="./samplepost4.html">1 reply</a></span>
-                    </div>
-                </div>
-            </div>
+            {{#each posts}}
+                {{> postview this}}
+            {{/each}}
         </div>
     </body>
 </html>
