--- a/views/templates/postview.hbs
+++ b/views/templates/postview.hbs
@@ -41,7 +41,7 @@
             <img src="/public/img/share-regular-24.png"/>
         </div>
         <div class="commentcounter">
-            <span><a href="{{linkofpost}}">{{numberofreplies}} reply</a></span>
+            <span><a href="{{linkofpost}}">{{numberofreplies}}</a></span>
         </div>
     </div>
 </div>
