routing kinda works

--- a/public/css/Sign_in.css
+++ b/public/css/Sign_in.css
@@ -129,7 +129,7 @@ body{
 .blocktitle{
     font-weight: 1000;
 }
-input[type="email"], [type = "password"] {
+input[type="text"], [type = "password"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
