--- a/views/mainpage_logged.hbs
+++ b/views/mainpage_logged.hbs
@@ -10,8 +10,8 @@
                 <div class = "headercontent">
                     <div class="headerhome">
                         <div class="websitelogo">
-                            <a href="/main.html"><img src="/public/img/byte_logo.png"/></a>
-                            <span class = "link"> <a style = "color: beige; text-decoration: none" href = "/main.html"> byte. </a> </span>
+                            <a href="/mainpage_logged"><img src="/public/img/byte_logo.png"/></a>
+                            <span class = "link"> <a style = "color: beige; text-decoration: none" href = "/mainpage_logged"> byte. </a> </span>
                         </div>
                     </div>
                     <div class="headersearchbar">
@@ -36,7 +36,7 @@
                             </div>
                         </div>
                         <div class="topbuttons">
-                            <a href="/main_not_logged.html"> Log out </a>
+                            <a href="/mainpage"> Log out </a>
                         </div>
                     </div>
                 </div>
@@ -52,12 +52,12 @@
                     <input type="search" class="posttext" placeholder="Create Post" onclick="redirectToAnotherPage()"/>
                 </div>
                 <div class="createpostpic">
-                    <a href="/CreatePost.html">
+                    <a href="/Create_post">
                     <img src="/public/img/image-alt-regular-24.png"/>
                     </a>
                 </div>
                 <div class="createpostattach">
-                    <a href="/CreatePost.html">
+                    <a href="/Create_post">
                     <img src="/public/img/folder-plus-regular-24.png"/>
                     </a>
                 </div>
