--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -26,7 +26,7 @@
             <form action = "/submitsignin" method="POST">
                 <div class = "Username">
                     <label for="username">Username:</label>
-                    <input type="email" id="username" name="username" required/>
+                    <input type="text" id="username" name="username" required/>
                 </div>
 
                 <div class = "Password">
