updated hbs for profileview

--- a/views/profileview.hbs
+++ b/views/profileview.hbs
@@ -75,11 +75,11 @@
                         <div class="latestpostpfp"> 
                             <a href="./profilepage1.html"> <img class="userimg" src="../public/img/AYAKA.jpg"/> </a>
                         </div>
-                        <p> Wala_3h <br> <span style="padding: 5px;">u/WalaEh</span><br> Bits: 1</p>
+                        <p> {{PosterUsername}} <br> <span style="padding: 5px;"> {{PosterHandle}}</span><br> Bits: 1</p>
                     </div>
                     <div class="latestpostsdetails"> 
-                        <h4> <a href="./samplepost1.html"> MDN is very convenient </a> </h4> 
-                        <p> It really helped us in creating this website! It gave a fast and easy way to access information to different elements. ^_^ </p>
+                        <h4> <a href="./samplepost1.html"> {{PostTitle}} </a> </h4> 
+                        <p> {{PostDesc}} </p>
                     </div>
                 </div>
             </div>
