--- a/views/samplepost1.hbs
+++ b/views/samplepost1.hbs
@@ -63,10 +63,29 @@
             <div class="postinfocontainer">
                 <h4> {{postheader}} </h4>
                 <p> {{postcontent}} </p>
-                <div class="replybutton"> <a href=""> Reply </a> </div>
+                <div class="footer">
+                    <div class="upbit">
+                        <img src="../public/img/up-arrow-regular-24.png"/>
+                    </div>
+                    <div class="downbit">
+                        <img src="../public/img/down-arrow-regular-24.png"/>
+                    </div>
+                    <div class="share">
+                        <img src="../public/img/share-regular-24.png"/>
+                    </div>
+                </div>
             </div>
         </div>
 
+        <div class="replyinputarea"> 
+            
+            <div class="replyinputbox">
+                <input type="text" id="replytextcontent" placeholder="Reply to this post..."/> 
+                
+            </div>
+            <div class="replybutton"> <a href=""> Reply </a> </div>
+        </div>
+        </div>
         <div class="replycontainer"> 
             <div class="replybox">
                 <div class = "replyinfo"> 
