--- a/views/samplepost1.hbs
+++ b/views/samplepost1.hbs
@@ -77,26 +77,9 @@
             </div>
         </div>
 
-        <div class="replycontainer"> 
-            <div class="replybox">
-                <div class = "replyinfo"> 
-                    <div class="replypfp"> 
-                        <a href="{{ReplierProfileLink}}"> <img class="userimg" src="{{ReplierPfpDir}}"> </a>
-                    </div>
-                    <p> {{ReplierUsername}} <br><span> {{ReplierHandle}} </span><br> Bits: {{ReplierBits}}</p>
-                    <div class="postdate"> 
-                        <h5> Posted on: {{ReplyDate}} </h5>
-                        <p> {{ReplyDateDistance}} </p>
-                    </div>
-                </div>
-                
-                
-                <div class="replycontent"> 
-                    <p> {{ReplyContent}} <br> </p>
-                    <div class="replybutton"> <a href=""> Reply </a></div>
-                </div>
-            </div>
-        </div>
+        {{#each reply}}
+                {{> postreply this}}
+        {{/each}}
     </div>
 </div>
 </body>
