updated reply view

--- a/views/templates/postreply.hbs
+++ b/views/templates/postreply.hbs
@@ -2,9 +2,9 @@
             <div class="replybox">
                 <div class = "replyinfo"> 
                     <div class="replypfp"> 
-                        <a href="{{ReplierProfileLink}}"> <img class="userimg" src="{{ReplierPfpDir}}"> </a>
+                        <a href="{{ReplierProfileLink}}"> <img class="userimg" src="{{userdeets.pfplink}}"> </a>
                     </div>
-                    <p> {{username}} <br><span> {{ReplierHandle}} </span><br> Bits: {{ReplierBits}}</p>
+                    <p> {{userdeets.username}} <br><span> {{userdeets.userhandle}} </span><br> Bits: {{userdeets.bits}}</p>
                     <div class="postdate"> 
                         <h5> Posted on: {{replydate}} </h5>
                         <p> {{ReplyDateDistance}} </p>
