added buttons to postreply template

--- a/views/templates/postreply.hbs
+++ b/views/templates/postreply.hbs
@@ -14,7 +14,18 @@
                 
                 <div class="replycontent"> 
                     <p> {{replycontent}} <br> </p>
-                    <div class="replybutton"> <a href=""> Reply </a></div>
+                    <div class="footer">
+                    <div class="upbit">
+                        <img src="../public/img/up-arrow-regular-24.png"/>
+                    </div>
+                    <div class="downbit">
+                        <img src="../public/img/down-arrow-regular-24.png"/>
+                    </div>
+                    <div class="share">
+                        <img src="../public/img/share-regular-24.png"/>
+                    </div>
+                    <div class="replybutton"><a href=""> Reply </a></div>
+                </div>
                 </div>
             </div>
         </div>
