main community progress kind of

--- a/views/templates/postview.hbs
+++ b/views/templates/postview.hbs
@@ -3,11 +3,11 @@
     <div class="postheader">
         <div class="communityposticonholder">
             <div class="communityposticon">
-                <img src="{{communityicon}}"/>
+                <img src="{{communityinfo.communityicon}}"/>
             </div>
         </div>
         <div class="userpostname">
-            <span class="postedon"><a href="{{communitylink}}">{{community}}</a></span>
+            <span class="postedon"><a href="{{communityinfo.communitylink}}">{{communityinfo.community}}</a></span>
             <span>·</span>
             <span>Posted by</span>
             <span class="postedby"><a href="{{userhandlelink}}">{{userhandle}}</a></span>
