logged in main page might be working

--- a/views/mainpage.hbs
+++ b/views/mainpage.hbs
@@ -71,7 +71,7 @@
                 </div>
             </div>
             {{#each posts}}
-                {{> postview this}}
+                {{> guest_postview this}}
             {{/each}}
         </div>
     </body>
