--- a/views/mainpage_logged.hbs
+++ b/views/mainpage_logged.hbs
@@ -21,8 +21,8 @@
                         <div class="profile">
                             <div class="profileicon">
                                 <div class="profileiconholder">
-                                    <a href="/profilepage2.html">
-                                    <img src="/public/img/pfp.jpg"/>
+                                    <a href="{{userhandlelink}}">
+                                    <img src="{{pfplink}}"/>
                                     </a>
                                 </div>
                             </div>
@@ -36,7 +36,7 @@
                             </div>
                         </div>
                         <div class="topbuttons">
-                            <a href="/mainpage"> Log out </a>
+                            <a href="/Sign_up"> Log out </a>
                         </div>
                     </div>
                 </div>
