main logged is done i hope

--- a/views/mainpage_logged.hbs
+++ b/views/mainpage_logged.hbs
@@ -21,7 +21,7 @@
                         <div class="profile">
                             <div class="profileicon">
                                 <div class="profileiconholder">
-                                    <a href="{{user.userhandlelink}}">
+                                    <a href="{{user.userprofilelink}}">
                                     <img src="{{user.pfplink}}"/>
                                     </a>
                                 </div>
@@ -45,7 +45,7 @@
             <div class="createpost">
                 <div class="createposticon">
                     <div class="createpostusericonholder">
-                        <img src="{{pfplink}}"/>
+                        <img src="{{user.pfplink}}"/>
                     </div>
                 </div>
                 <div class="createposttext">
