--- a/views/main_community.hbs
+++ b/views/main_community.hbs
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="../public/css/main_community.css"/>
 <html>
     <title>
-        Byte | Apple
+        Byte | {{community.community}}
     </title>
     <body>
         <div class="homecontainer">
@@ -21,17 +21,17 @@
                         <div class="profile">
                             <div class="profileicon">
                                 <div class="profileiconholder">
-                                    <a href="./profilepage2.html">
-                                    <img src="/public/img/pfp.jpg"/>
+                                    <a href="{{user.userprofilelink}}">
+                                    <img src="{{user.pfplink}}"/>
                                     </a>
                                 </div>
                             </div>
                             <div class="profilecontainer">
                                 <div class="profiledisplayname">
-                                    <span>gojowithiphone</span>
+                                    <span>{{user.username}}</span>
                                 </div>
                                 <div class="profilehandlename">
-                                    <span>u/gojo1234</span>
+                                    <span>{{user.userhandle}}</span>
                                 </div>
                             </div>
                         </div>
@@ -53,10 +53,10 @@
                 <div class="communityname">
                     <div class="communitydisplaynamecontainer">
                         <div class="communitydisplayname">
-                            <span>Apple</span>
+                            <span>{{community.communitydisplayname}}</span>
                         </div>
                         <div class="communityhandle">
-                            <span>b/apple</span>
+                            <span>{{community.community}}</span>
                         </div>
                     </div>
                     <div class="commuinitybuttons">
@@ -65,7 +65,7 @@
                     <div class="communitystats">
                         <div class="totalmembers">
                             <div class="totalcounternumber">
-                                <span> 1.1m</span>
+                                <span>{{shortenVotes community.totalmembers}}</span>
                             </div>
                             <div class="totalcountertext">
                                 <span>Total Members</span>
@@ -73,7 +73,7 @@
                         </div>
                         <div class="onlinemembers">
                             <div class="onlinecounternumber">
-                                <span> 800k</span>
+                                <span> {{shortenVotes community.onlinemembers}}</span>
                             </div>
                             <div class="onlinecountertext">
                                 <span>Online Members</span>
@@ -85,7 +85,7 @@
             <div class="createpost">
                 <div class="createposticon">
                     <div class="createpostusericonholder">
-                        <img src="/public/img/pfp.jpg"/>
+                        <img src="{{user.pfplink}}"/>
                     </div>
                 </div>
                 <div class="createposttext">
@@ -105,7 +105,7 @@
             <div class="navigation">
                 <div class="communities">
                     <div class="dropdown">
-                        <button class="dropbtn">r/apple
+                        <button class="dropbtn">{{community.community}}
                           <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
