--- a/views/profileview.hbs
+++ b/views/profileview.hbs
@@ -23,16 +23,16 @@
                         <div class="profileicon">
                             <div class="profileiconholder">
                                 <a href="{{CurrUserProfileLink}}">
-                                <img src="{{CurrUserProfileImgDir}}"/>
+                                <img src="{{currentUser.pfplink}}"/>
                                 </a>
                             </div>
                         </div>
                         <div class="profilecontainer">
                             <div class="profiledisplayname">
-                                <span>{{CurrUserDisplayName}}</span>
+                                <span>{{currentUser.username}}</span>
                             </div>
                             <div class="profilehandlename">
-                                <span>{{CurrUserHandle}}</span>
+                                <span>{{currentUser.userhandle}}</span>
                             </div>
                         </div>
                     </div>
@@ -47,23 +47,23 @@
             <div class="profilecontainer1">
                 <div class="userinfo">
                     <div class="userpfp">
-                        <img class="userimg" src="{{ProfilePfpDir}}" />
+                        <img class="userimg" src="{{currentUser.pfplink}}" />
                     </div>
                     <div class="pfpeditbutton"> <a href=""> Edit </a></div>
                 </div>
 
                 <div class="profileinfo"> 
-                    <h3> {{ProfileUsername}} </h3> <span>{{ProfileHandle}}</span><span class="usertitle" style="color: green"> byte Admin</span>
-                    <h5> Bits: {{ProfileBits}} </h5>
+                    <h3> {{currentUser.username}} </h3> <span>{{currentUser.userhandle}}</span><span class="usertitle" style="color: green">{{currentUser.role}}</span>
+                    <h5> Bits: {{currentUser.bits}} </h5>
                     <h4> About me: </h4>
                     
                     <div class="profiledesc">
-                        <p>{{ProfileDesc}}!</p>
+                        <p>{{currentUser.aboutme}}</p>
                     </div>
                         
                     
                     <div class="editbutton"> 
-                        <form method="post"><button type="submit">Confirm</button></form>
+                        <form action="submiteditprofile"method="POST"><button type="submit">Confirm</button></form>
                         <a href=""> Edit description </a> 
                     </div>
                 </div> 
@@ -73,9 +73,9 @@
                 <div class="latestpost"> 
                     <div class="latestpostinfo">
                         <div class="latestpostpfp"> 
-                            <a href="./profilepage1.html"> <img class="userimg" src="../public/img/AYAKA.jpg"/> </a>
+                            <a href="./profilepage1.html"> <img class="userimg" src="{{currentUser.pfplink}}"/> </a>
                         </div>
-                        <p> {{PosterUsername}} <br> <span style="padding: 5px;"> {{PosterHandle}}</span><br> Bits: 1</p>
+                        <p> {{currentUser.username}} <br> <span style="padding: 5px;"> {{currentUser.userhandle}}</span><br> Bits: {{currentUser.bits}}</p>
                     </div>
                     <div class="latestpostsdetails"> 
                         <h4> <a href="./samplepost1.html"> {{PostTitle}} </a> </h4> 
